--- a/about.html
+++ b/about.html
@@ -100,13 +100,13 @@
                             <button class="main-content-btn" type="submit">Our Concept<i
                                     class="fa fa-solid fa-arrow-right arrows"></i></button>
                         </div>
-                        <div class="content-img">
+                        <div class="content-img inerno-img ">
                             <img src="./img/Photo (11).jpg">
                         </div>
                     </div>
 
                     <div class="result">
-                        <div class="content-img">
+                        <div class="content-img inerno-img ">
                             <img src="./img/Photo (7).jpg">
                         </div>
                         <div class="main-content">
@@ -129,7 +129,7 @@
             <div class="team-content">
                 <div class="flip-img">
                     <div class="flip-front">
-                        <div class="team-image1">
+                        <div class="team-image1 inerno-img ">
                             <img src="./img/Photo (10).png">
                         </div>
                         <div class="team-text1">
@@ -150,7 +150,7 @@
 
                 <div class="flip-img">
                     <div class="flip-front">
-                        <div class="team-image2">
+                        <div class="team-image2 inerno-img ">
                             <img src="./img/Photo (9).png">
                         </div>
                         <div class="team-text2">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="flip-img">
                     <div class="flip-front">
-                        <div class="team-image">
+                        <div class="team-image inerno-img ">
                             <img src="./img/Photo (50).png">
                         </div>
                         <div class="team-text">
@@ -190,7 +190,7 @@
                 </div>
                 <div class="flip-img">
                     <div class="flip-front">
-                        <div class="team-image3">
+                        <div class="team-image3 inerno-img ">
                             <img src="./img/Photo (8).png">
                         </div>
                         <div class="team-text">
