--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
                     <div class="cards">
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Kitchan Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (4).png">
                             </div>
                             <div class="card-heading">
@@ -117,7 +117,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Living Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (5).png">
                             </div>
                             <div class="card-heading">
@@ -132,7 +132,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Interior Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (6).png">
                             </div>
                             <div class="card-heading">
@@ -147,7 +147,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">kitchen Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (15).png">
                             </div>
                             <div class="card-heading">
@@ -162,7 +162,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Living Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (16).png">
                             </div>
                             <div class="card-heading">
@@ -177,7 +177,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Interior Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (17).png">
                             </div>
                             <div class="card-heading">
@@ -192,7 +192,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">kitchen Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (4).png">
                             </div>
                             <div class="card-heading">
@@ -207,7 +207,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Living Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (5).png">
                             </div>
                             <div class="card-heading">
@@ -222,7 +222,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Interior Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (6).png">
                             </div>
                             <div class="card-heading">
@@ -237,7 +237,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">kitchen Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (15).png">
                             </div>
                             <div class="card-heading">
@@ -252,7 +252,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Living Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (16).png">
                             </div>
                             <div class="card-heading">
@@ -267,7 +267,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Interior Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (17).png">
                             </div>
                             <div class="card-heading">
@@ -282,7 +282,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">kitchen Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (4).png">
                             </div>
                             <div class="card-heading">
@@ -297,7 +297,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Living Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (5).png">
                             </div>
                             <div class="card-heading">
@@ -312,7 +312,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Interior Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (6).png">
                             </div>
                             <div class="card-heading">
@@ -327,7 +327,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">kitchen Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (15).png">
                             </div>
                             <div class="card-heading">
@@ -342,7 +342,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Living Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (16).png">
                             </div>
                             <div class="card-heading">
@@ -357,7 +357,7 @@
                         </div>
                         <div class="card-details">
                             <button class="blog-btn card-btn" type="button">Interior Design</button>
-                            <div class="card-img">
+                            <div class="card-img inerno-img">
                                 <img src="./img/Photo (17).png">
                             </div>
                             <div class="card-heading">
