--- a/homepage.html
+++ b/homepage.html
@@ -71,7 +71,7 @@
                     <button type="button" class="intro-btn">Get Started<i
                             class="fa fa-solid fa-arrow-right arrows"></i></button>
                 </div>
-                <div class="banner-image homepage-img">
+                <div class="banner-image homepage-img inerno-img ">
                     <img src="./img/Photo.png">
                 </div>
             </div>
