--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <button type="button" class="intro-btn">Get Started<i
                                 class="fa fa-solid fa-arrow-right arrows"></i></button>
                     </div>
-                    <div class="banner-image">
+                    <div class="banner-image inerno-img ">
                         <img src="./img/Photo.png">
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                                 class="fa fa-solid fa-arrow-right arrows"></i></button>
                     </div>
                     <div class="about-img">
-                        <div class="images"></div>
+                        <div class="images inerno-img"></div>
                     </div>
                 </div>
 
