client logo slider bug fixed

--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
                         <img src="./img/03.svg">
                         <img src="./img/04.svg">
                         <img src="./img/05.svg">
+                        <img src="./img/01.svg">
+                        <img src="./img/02.svg">
+                        <img src="./img/03.svg">
+                        <img src="./img/04.svg">
+                        <img src="./img/05.svg">
                     </div>
                 </div>
 
