--- a/serviceSingle.html
+++ b/serviceSingle.html
@@ -113,6 +113,11 @@
                         <img src="./img/03.svg">
                         <img src="./img/04.svg">
                         <img src="./img/05.svg">
+                        <img src="./img/01.svg">
+                        <img src="./img/02.svg">
+                        <img src="./img/03.svg">
+                        <img src="./img/04.svg">
+                        <img src="./img/05.svg">
                     </div>
                 </div>
                 <div class="play-button">
@@ -254,8 +259,8 @@
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
                                     <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@interno.com&su=&body="
-                                        target="_blank">contact@interno.com</a></li>
-                                <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
+                                            target="_blank">contact@interno.com</a></li>
+                                    <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
